Mon May  6 06:00:10 1996  Benjamin J. Lee  <benjamin@cyclic.com>

        * Version 1.8.1

Sun May  5 21:39:02 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* vers_ts.c (Version_TS): If sdtp is NULL, go ahead and check
	RCS_getexpand for options.  Fixes binaries and non-unix clients.
	* sanity.sh: Fix binfiles-5.5 to test for the correct behavior
	rather than the buggy behavior which existed when the binfiles-5.5
	test was written.
	(binfiles-14c,binfiles-14f): Likewise.

Sun May  5 17:38:21 1996  Benjamin J. Lee  <benjamin@cyclic.com>

        Integrated changes submitted by Ian Taylor <ian@cygnus.com>

        * update.c (update_dirent_proc): cvs co -p doesn't print
        anything when run from an empty directory.

        * import.c (import_descend_dir): Check for a file in the
        repository which will be checked out to the same name as the
        directory.

Thu May  2 13:34:37 1996  Benjamin J. Lee  <benjamin@cyclic.com>

	* Version 1.7.88

Thu May  2 01:40:55 1996  Benjamin J. Lee  <benjamin@cyclic.com>

	* server.c (HAVE_INITGROUPS): Use initgroups() only if
        located by configure, in the event a system has crypt(), but
	no initgroups()

Wed May  1 18:05:02 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (basica): When testing rejection of reserved tag name,
	use BASE instead of RESERVED.

Wed May  1 15:15:11 1996  Tom Jarmolowski  <tjj@booklink.com>

	* rcs.c (linevector_delete): Only copy up to vec->nlines - nlines,
	not to vec->nlines.

Wed May  1 15:43:21 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcscmds.c (RCS_settag): Instead of reserving all tag names
	containing only uppercase letters, reserve only BASE and HEAD.
	* sanity.sh (mflag): Revert 26 Mar change; use all-uppercase tag
	name again.

Wed May  1 15:15:11 1996  Tom Jarmolowski  <tjj@booklink.com>

	* rcs.c (linevector_add): Move increment of i out of larger
	statement, to avoid assumptions about evaluation order.
